--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 .DS_Store
 node_modules
-/dist
+dist
+vue.config.js
+package.json
+package-lock.json
+jsconfig.json
+babel.config.js
 
 
 # local env files
@@ -21,3 +26,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+*.md
